botmove noch in frontendview