@@ -983,7 +983,7 @@ public class FrontendView extends JFrame {
 	 */
 	public void validateMove() {
 		if(gameInstance.getCurrentPlayer().getName() == "BotPlayer") {
-			botPlayerService.validateBotMove(gameInstance);
+			validateBotMove();
 		}
 		else {
 			// Eingabe öffnen für Auswählen der Karten
@@ -1144,98 +1144,179 @@ public class FrontendView extends JFrame {
 		
 	}
 	
+	/**
+	 * BOT MOVE
+	 * 
+	 * @param gameInstance
+	 */
 	public void validateBotMove() {
 		System.out.println("*****BOT MOVE*****");
-		List<Card> tempCardList = new LinkedList<Card>();
-		List<Card> botHandCards = new LinkedList<Card>();
-		botHandCards = cardService.sortCardsByValue(gameInstance.getCurrentPlayer().getHand());
-		boolean twoCardsEqual = true;
 		
-		if(gameInstance.getBoardCards() == null) {
-			System.out.println("BOT MOVE; BOARD NULL");
-			Card x = (Card) botHandCards.get(0);
-			Card y = (Card) botHandCards.get(1);
-			
-			int c = x.compareTo(y);
-			if (c == 0) {
-				twoCardsEqual = true;
-			} else {
-				twoCardsEqual = false;
-			}
-			if(twoCardsEqual) {
-				tempCardList.add(x);
-				tempCardList.add(y);
-				
-			} else {
-				tempCardList.add(x);
-			}
-		} else {
-			System.out.println("BOT MOVE; BOARD HAT KARTEN");
-			Card b = gameInstance.getBoardCards().get(0);
-			
-			for(Card card : botHandCards) {//durch alle karten des bot
-				if(card.getZahl().equals(b.getZahl())) { //die karten, die mit board stimmen
-					for(int i = 0; i < gameInstance.getBoardCards().size(); i++) { //aber nur so lange wie board groß ist
-						tempCardList.add(card);
-					}
-				}
-//				if(card.getZahl().compareTo(b.getZahl())==1) { //die karten, die mit board stimmen
-//					//card.getZahl().equals(b.getZahl())
-//					for(int i = 0; i < gameInstance.getBoardCards().size(); i++) { //aber nur so lange wie board groß ist
-//						tempCardList.add(card);
-//					}
-//				}
-			}
-		}
-		gameInstance.setBoardCards(tempCardList);
-		PLAYSI.removeFromHand(gameInstance.getCurrentPlayer(), tempCardList);
-		addCurrentPlayerToResult();
-		gameInstance.setCurrentPlayer(PLAYSI.getNextPlayer(gameInstance));
-		updateCurrentBoardCardPanels(gameInstance);
-		updateCardButtons(gameInstance);
-		updateCurrentPlayerLabel();
-		
-		try {
-			if (gameInstance.getBoardCards().get(0).getZahl().toString() == "ASS") {
+        List<Card> cardsToPlay = new LinkedList<Card>();
+        List<Card> botHandCards = new LinkedList<Card>();
+        botHandCards = cardService.sortCardsByValue(gameInstance.getCurrentPlayer().getHand());
+        
+        List<Card> higherCards = new LinkedList<Card>();
+        
+//      boolean twoCardsEqual = true;
+       
+        if(gameInstance.getBoardCards() == null) {
+           System.out.println("BOT MOVE; BOARD NULL");
+           //Methode prüft, ob die ersten zwei karten gleichwertig sind
+           //und setzt dann die eine oder zwei karten als tempCardList
+           cardsToPlay = setTwoEqualCards(botHandCards);
+           updateAll(cardsToPlay);
+        }
+        else if (gameInstance.getBoardCards().size() == 1) {
+           System.out.println("BOT MOVE; BOARD 1");
+           
+           higherCards = findHigherCards(botHandCards);
+           
+           if(higherCards.isEmpty()) {
+        	   botPass();
+           } else {
+        	   cardsToPlay.add(higherCards.get(0));
+        	   updateAll(cardsToPlay);
+           }
+        }
+        else if (gameInstance.getBoardCards().size() == 2) {
+        	System.out.println("BOT MOVE; BOARD 2");
+            List<Card> temp = new LinkedList<Card>();
+            higherCards = findHigherCards(botHandCards);
+            if(higherCards.isEmpty()) {
+            	botPass();
+            }
+            else {
+            	// und die gleiche zahl haben
+                for (int i = 1; i < higherCards.size(); i++) { //was wenn bot nur noch 1 karte auf hand
+                	System.out.println("hier");
+        			if(higherCards.get(i-1).getZahl().equals(higherCards.get(i).getZahl())){
+        				System.out.println("hier2");
+        				temp.add(higherCards.get(i-1));
+        				temp.add(higherCards.get(i));
+        			}
+        		}
+                if(temp.size()<2) {
+                	botPass();
+                } else {
+                	cardsToPlay.add(temp.get(0));
+                	cardsToPlay.add(temp.get(1));
+                    updateAll(cardsToPlay);
+                }
+                
+            }
+            
+        }
+        
+       
+        try {
+        	if (gameInstance.getBoardCards().get(0).getZahl().toString() == "ASS") {
 
 				// Setzen der boardCards auf null, Update Frontend
 				gameInstance.setBoardCards(null);
 				updateCurrentBoardCardPanels(gameInstance);
 
-			}
-		} catch (NullPointerException e) {
-			gameInstance.setBoardCards(null);
-			updateCurrentBoardCardPanels(gameInstance);
-		} catch (IndexOutOfBoundsException IOOB) {
-			gameInstance.setBoardCards(null);
-			updateCurrentBoardCardPanels(gameInstance);
-		}
-		// Reset des PAssspielzug-Counters nach jedem validen Spielzug
-		//passCounter = 0;
+        	}
+        } catch (NullPointerException e) {
+           gameInstance.setBoardCards(null);
+           updateCurrentBoardCardPanels(gameInstance);
+        } catch (IndexOutOfBoundsException IOOB) {
+           gameInstance.setBoardCards(null);
+           updateCurrentBoardCardPanels(gameInstance);
+        }
+        
+        // Reset des PAssspielzug-Counters nach jedem validen Spielzug
+        passCounter = 0;
+	
+	}
+	
+	void updateAll(List<Card> cardsToPlay) {
+		gameInstance.setBoardCards(cardsToPlay);
+        PLAYSI.removeFromHand(gameInstance.getCurrentPlayer(), cardsToPlay);
+        addCurrentPlayerToResult();
+        gameInstance.setCurrentPlayer(PLAYSI.getNextPlayer(gameInstance));
+        updateCurrentBoardCardPanels(gameInstance);
+        updateCardButtons(gameInstance);
+        updateCurrentPlayerLabel();
 	}
 	
 	/**
-	 * NUR ZUM TESTEN VON BOT MOVE
-	 * @param tempCardList
-	 * @param k
+	 * Setzt Karte(n), die gleichwertig sind zueinander.
+	 * Funktioniert nur, wenn Boardkarte leer ist.
+	 * 
+	 * @param cardList
 	 * @return
 	 */
-	public boolean checkSelectedCardsIfEqual(List<Card> tempCardList, int k) {
-		// tempCards valid? compareTo -> die ausgewählten Karten müssen die gleichen
-		// Zahlen haben
-		boolean tempCardsEqual = true;
-		
-		// gerade hinzugefügte Card
-		Card x = (Card) tempCardList.get(k);
-		Card y = (Card) ((LinkedList) tempCardList).getFirst();
+	public List<Card> setTwoEqualCards(List<Card> cardList) {
+       
+        List<Card> twoEqualCards = new LinkedList<Card>();
+        boolean isEqual = true;
+       
+        Card x = (Card) cardList.get(0);
+        Card y = (Card) cardList.get(1);
+       
+        int c = x.compareTo(y);
+        if (c == 0) {
+               isEqual = true;
+        } else {
+               isEqual = false;
+        }
+       
+        if(isEqual) {
+               twoEqualCards.add(x);
+               twoEqualCards.add(y);
+               return twoEqualCards;
+        } else {
+               twoEqualCards.add(x);
+               return twoEqualCards;
+        }
+	}
+	
+	/**
+	 * Sucht nach Karten, die höher sind als Boardkarten.
+	 * 
+	 * @param botHandCards
+	 * @return
+	 */
+	public List<Card> findHigherCards (List<Card> botHandCards){
+		List<Card> higherCards = new LinkedList<Card>();
+        Card b = gameInstance.getBoardCards().get(0);
+        
+      //suche in bothandcards nach der näcshtgrößten karte
+        for(Card card : botHandCards) {
+     	   if(card.getZahl().compareTo(b.getZahl()) > 0) {
+     		   higherCards.add(card);
+     	   }
+        }
+        System.out.println("Boardkarte: " + gameInstance.getBoardCards().get(0).toString());
+        System.out.println("higherCards: " + higherCards.toString());
+        return higherCards;
+	}
 
-		int c = x.compareTo(y);
-		if (c == 0) {
-			tempCardsEqual = true;
-		} else {
-			tempCardsEqual = false;
+	void botPass() {
+		System.out.println("BOT MUSS PASSEN");
+		passCounter++;
+		// setzen des naechsten Spielers
+		gameInstance.setCurrentPlayer(PLAYSI.getNextPlayer(gameInstance));
+		// Frontend Update
+		updateCurrentPlayerLabel();
+		updateCardButtons(gameInstance);
+		//reset der Current BoardCard, da jeder Spieler 1x gepasst hat
+		
+		int playersWithCardsCounter = 0;
+		for (Player player : gameInstance.getPlayers()){
+			if(PLAYSI.hasCards(player)){
+				playersWithCardsCounter++;
+			}
 		}
-		return tempCardsEqual;
+		
+		if (passCounter == playersWithCardsCounter-1) {
+			gameInstance.setBoardCards(null);
+			System.out.println("Pass-Counter = Anzahl Spieler mit Karten - boardCards resettet");
+		// Frontend Update
+			updateCardButtons(gameInstance);
+			updateCurrentBoardCardPanels(gameInstance);
+		}
 	}
 
 	/*
